Fixed fonts and spacing to use REMs

--- a/template/src/styles/main.css
+++ b/template/src/styles/main.css
@@ -1,6 +1,6 @@
 /*
-  This is a minimal stylesheet to style starter components with a minimal fuss.
-  Please feel free to replace with your choice of styling mechanism.
+  This is a simple stylesheet to style starter components with minimal fuss.
+  Feel free to replace it with your choice of styling mechanism.
 */
 
 html {
@@ -26,14 +26,14 @@ body {
 }
 
 main {
-  padding: 16px;
+  padding: var(--sp-2);
 }
 
 h1 {
-  font-size: 1.5rem;
+  font-size: var(--font-size-2xl);
   font-weight: 500;
   line-height: 1.2;
-  margin: 0 0 8px 0;
+  margin: 0 0 var(--sp-1) 0;
 }
 
 table {
@@ -45,19 +45,66 @@ table {
 }
 
 table tr:nth-of-type(2n) {
-  background-color: #f3f3f6;
+  background-color: var(--grey-100);
 }
 
 td,
 th {
   vertical-align: middle;
-  padding: 0.75rem 0.25rem;
+  padding: var(--px-12) var(--px-4);
 }
 
 thead {
-  border-bottom: 2px solid #d2d6dd;
+  border-bottom: var(--px-2) solid var(--grey-300);
 }
 
 .text-center {
   text-align: center;
+}
+
+:root {
+  /* ----- Color Palette ----- */
+  --grey-50: #fafafa;
+  --grey-100: #f3f3f6;
+  --grey-200: #eeeeee;
+  --grey-300: #d2d6dd;
+  --grey-400: #bdbdbd;
+  --grey-500: #9e9e9e;
+  --grey-600: #757575;
+  --grey-700: #616161;
+  --grey-800: #424242;
+  --grey-900: #212121;
+
+  /* ----- pixel to rem conversion based on 16px browser default size ----- */
+  --px-2: 0.125rem;
+  --px-4: 0.25rem;
+  --px-6: 0.375rem;
+  --px-8: 0.5rem;
+  --px-10: 0.625rem;
+  --px-12: 0.75rem;
+  --px-14: 0.875rem;
+  --px-16: 1rem;
+  --px-18: 1.125rem;
+  --px-20: 1.25rem;
+  --px-22: 1.375rem;
+  --px-24: 1.5rem;
+  --px-32: 2rem;
+  --px-40: 2.5rem;
+  --px-48: 3rem;
+
+  /* ----- Spacing ----- */
+  --sp-1: var(--px-8);
+  --sp-2: var(--px-16);
+  --sp-3: var(--px-24);
+  --sp-4: var(--px-32);
+  --sp-5: var(--px-40);
+  --sp-6: var(--px-48);
+
+  /* ----- Font Size ----- */
+  --font-size-xs: var(--px-12);
+  --font-size-sm: var(--px-14);
+  --font-size-base: var(--px-16);
+  --font-size-lg: var(--px-18);
+  --font-size-xl: var(--px-20);
+  --font-size-2xl: var(--px-24);
 }
